- try to fix blurry pngs

--- a/SjuLoves_v3/public_html/css/sjuloves.css
+++ b/SjuLoves_v3/public_html/css/sjuloves.css
@@ -475,3 +475,82 @@ transition: opacity 500ms;
   left:220px; 
   background:url(https://googledrive.com/host/0B7sQ2oI9VJiqUHRZMGIxazdfR1U/social_icons_selection_small.png) -183px -0px}
 #twitter a:hover {background:url(https://googledrive.com/host/0B7sQ2oI9VJiqUHRZMGIxazdfR1U/social_icons_selection_small.png) -183px -57px}
+
+@media only screen and (-webkit-min-device-pixel-ratio: 2) {
+    /* scale the images down so they are not blurry */
+    #social_networks {
+        height: 22px;
+      }
+      #soc_net_ul {
+        width: 134px;
+        height:28px;
+        padding:0;
+        margin:0 auto;
+        position:relative;
+      }
+      #soc_net_ul li {
+        list-style:none; 
+        margin:0; 
+        padding:0; 
+        display:block; 
+        position:absolute;
+      }
+      #soc_net_ul a {
+        display: block;
+      }
+      #soc_net_ul span {
+        display:none;
+        font-size: 2rem;
+      }
+
+      #facebook, #facebook a {
+        width:22px; 
+        height:28px; 
+        top:0px; 
+        left:0px; 
+        background:url(https://googledrive.com/host/0B7sQ2oI9VJiqUHRZMGIxazdfR1U/social_icons_selection_small.png) 0px 0px;
+        background-size: 50%;
+      }
+      #facebook a:hover {
+          background:url(https://googledrive.com/host/0B7sQ2oI9VJiqUHRZMGIxazdfR1U/social_icons_selection_small.png) -0px -28px;
+          background-size: 50%;
+      }
+
+
+      #email, #email a {
+        width:22px; 
+        height:28px; 
+        top:0px; 
+        left:22px; 
+        background:url(https://googledrive.com/host/0B7sQ2oI9VJiqUHRZMGIxazdfR1U/social_icons_selection_small.png) -47px -0px;
+        background-size: 50%;
+      }
+      #email a:hover {
+        background:url(https://googledrive.com/host/0B7sQ2oI9VJiqUHRZMGIxazdfR1U/social_icons_selection_small.png) -47px -57px;
+        background-size: 50%;
+      }
+
+      #bloglovin, #bloglovin a {
+        width:47px; 
+        height:55px; 
+        top:0px; 
+        left:110px; background:url(https://googledrive.com/host/0B7sQ2oI9VJiqUHRZMGIxazdfR1U/social_icons_selection_small.png) -91px -0px}
+      #bloglovin a:hover {background:url(https://googledrive.com/host/0B7sQ2oI9VJiqUHRZMGIxazdfR1U/social_icons_selection_small.png) -91px -57px}
+
+      #instagram, #instagram a {
+        width:47px; 
+        height:55px; 
+        top:0px; 
+        left:165px; 
+        background:url(https://googledrive.com/host/0B7sQ2oI9VJiqUHRZMGIxazdfR1U/social_icons_selection_small.png) -136px -0px}
+      #instagram a:hover {background:url(https://googledrive.com/host/0B7sQ2oI9VJiqUHRZMGIxazdfR1U/social_icons_selection_small.png) -136px -57px}
+
+      #twitter, #twitter a {
+        width:47px; 
+        height:55px; 
+        top:0px; 
+        left:220px; 
+        background:url(https://googledrive.com/host/0B7sQ2oI9VJiqUHRZMGIxazdfR1U/social_icons_selection_small.png) -183px -0px}
+      #twitter a:hover {background:url(https://googledrive.com/host/0B7sQ2oI9VJiqUHRZMGIxazdfR1U/social_icons_selection_small.png) -183px -57px}
+
+}
